# REDSOFT

./: .gitignore  pyproject.toml  requirements.txt
task_1/: main.py
task_2/: client.py  server.py
task_2/server/: config.ini  database.py  main.py  main_server.py  routes.py
