[tool.poetry]
name = "redsoft"
version = "0.1.0"
description = ""
authors = ["YegorPedan <wzxv_@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
