[tool.poetry]
name = "redsoft"
version = "0.1.0"
description = ""
authors = ["YegorPedan <wzxv_@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
python-jose = "^3.3.0"
uvicorn = "^0.24.0.post1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
